# opends

./: .gitignore  CLAUDE.md  CREDITS.md  Cargo.toml  README.md  patchnotes.md  pick-it-up.md  roadmap.md  spec.md
docs/: README.md  binary-patching.md  build-environment.md  dso-symbols.md  dsun-exe-re.md  engine-quirks.md  file-formats.md  gpl-bytecode.md  gpl-opcodes.md  install-variants.md  known-bugs.md  next-versions.md  patch-workflow.md  research.md  upstream-projects.md  versioning.md
docs/cookbook/: README.md  bootstrap-items.md  edit-ds1-party.md  edit-pc-hp.md
docs/source-hashes/: ds1-gog-1.10.toml  ds2-gog-1.10.toml
ds1-patch/: README.md
ds2-patch/: README.md
tools/: README.md
tools/atlas/: README.md  atlas.py
tools/dialog-extract/: README.md  dialog-extract.py
tools/dialog-extract/syms/: speakers.toml
tools/gff-edit/: Cargo.toml  README.md
tools/gff-edit/src/: builder.rs  lib.rs
tools/gff-edit/tests/: builder_corpus.rs  corpus_roundtrip.rs
tools/gpl-asm/: Cargo.toml  README.md
tools/gpl-asm/src/: edit.rs  lib.rs  parse.rs  validate.rs
tools/gpl-asm/tests/: corpus_roundtrip.rs  text_roundtrip.rs  validate_smoke.rs
tools/gpl-disasm/: Cargo.toml  README.md
tools/gpl-disasm/scripts/: import-dso-symbols.py
tools/gpl-disasm/src/: lib.rs
tools/gpl-disasm/syms/: functions.toml  locals.toml  opcodes.toml  variables.toml
tools/gpl-disasm/tests/: corpus_smoke.rs
tools/image-extract/: Cargo.toml  README.md
tools/image-extract/src/: lib.rs
tools/image-extract/tests/: corpus_smoke.rs  pack_corpus.rs
tools/opcode-fuzz/: README.md  opcode-fuzz.py  opcode-fuzz.sh
tools/opcode-fuzz/recipes/: README.md  byte-inc.asm
tools/opends/: Cargo.toml  README.md
tools/opends/src/: main.rs
tools/region-render/: Cargo.toml  README.md
tools/region-render/src/: lib.rs
tools/region-render/tests/: corpus_smoke.rs
tools/repro/: README.md  repro.py  repro.sh
tools/repro/bugs/: README.md
tools/repro/bugs/ds1-smoke/: SOUND.CFG  bug.toml
tools/repro/bugs/ds2-smoke/: SOUND.CFG  bug.toml
tools/repro/configs/: ds1.conf  ds2.conf
tools/save-inspect/: README.md  save-inspect.py
tools/save-inspect/scripts/: ds1-party-edit.py
tools/save-inspect/syms/: items.toml
tools/verify-install/: README.md  verify-install.py
