[workspace]
members = [
    "tools/gff-edit",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Brandon LaRocque"]
repository = "https://github.com/VirInvictus/opends"

# OpenDS tools version independently per docs/versioning.md.
# Each crate sets its own [package].version inline; we do NOT
# inherit workspace.package.version.

# Minimal shared dependency set. Additions require per-tool
# justification per spec.md §7a.
[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
# Errors
anyhow = "1"
thiserror = "2"
