[package]
name = "gpl-asm"
version = "0.7.0"
description = "Reassembler for SSI's GPL (Game Programming Language) bytecode (Dark Sun)."
readme = "README.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "gpl_asm"
path = "src/lib.rs"

[[bin]]
name = "gpl-asm"
path = "src/bin/gpl-asm.rs"

[dependencies]
gpl-disasm = { path = "../gpl-disasm" }
gff-edit = { path = "../gff-edit" }
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
